[package]
name = "intertrait-nostd"
version = "0.2.4"
license = "MIT OR Apache-2.0"
description = "The intertrait crate, with no_std support."
edition = "2018"
repository = "https://github.com/RoxyOS/intertrait-nostd"
readme = "README.md"
categories = ["rust-patterns"]
keywords = ["trait", "cast", "any", "no_std"]
include = ["src/**/*", "Cargo.toml", "LICENSE-*", "README.md"]

[lib]
name = "intertrait"

[dependencies]
hashbrown = { version = "0.17", default-features = false }
spin = { version = "0.10", default-features = false, features = ["lazy"] }
linkme = "0.2"
intertrait-macros = { version = "=0.2.3", path = "macros" }

[dev-dependencies]
trybuild = "1.0"
doc-comment = "0.3"

[workspace]
members = ["macros"]
