[package]
name = "intertrait-nostd-macros"
description = "Macros for intertrait crate, which allows for direct casting between trait objects"
version = "0.2.3"
authors = ["CodeChain Team <hi@codechain.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/CodeChain-io/intertrait"
include = ["src/**/*", "Cargo.toml", "LICENSE-*"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
intertrait = { package = "intertrait-nostd", version = "=0.2.4", path = ".." }
linkme = "0.2"
